app-danilo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app-danilo
  name: app-danilo-svc
  namespace: app-danilo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app-danilo
status:
  loadBalancer: {}
