ingress-app-danilo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-danilo-ingress
  namespace: app-danilo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
spec:
  tls:
  - hosts:
    - app-danilo-ingress.com
    secretName: cafe-secret
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-danilo-svc
            port:
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: app-danilo-svc
            port:
              number: 80
